update startup.html file
update startup.html file

--- a/startup.html
+++ b/startup.html
@@ -228,7 +228,7 @@
             <div class="row">
                 <div class="col-md-6">
                     &copy; 2016 Startup.logo is not a real thing. If it is, this site was not meant to be a mockery of it. <br>
-                    Coded by <a href="http://bradhussey.ca/">Brad</a>
+                    Coded by <a href="http://www.steventanner04.com/">Steven</a>
                 </div>
                 <div class="col-md-2">
                     <h6>Our product</h6>
